--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -3,21 +3,21 @@
     <div class="column half">
       <img src="../assets/images/album_covers/01.png" class="album-cover-art">
     </div>
-    <div class="album-view-details column half" ng-repeat="albumInfo in album.albumData|limitTo:1">
-      <h2 class="album-view-title">{{ albumInfo.title }}</h2>
-      <h3 class="album-view-artist">{{ albumInfo.artist }}</h3>
-      <h5 class="album-view-release-info">{{ albumInfo.year }} Spanish Records</h5>
+    <div class="album-view-details column half">
+      <h2 class="album-view-title">{{ album.albumData.title }}</h2>
+      <h3 class="album-view-artist">{{ album.albumData.artist }}</h3>
+      <h5 class="album-view-release-info">{{ album.albumData.year }} {{ album.albumData.label }}</h5>
     </div>
   </section>
   <table class="album-view-song-list">
-    <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" ng-repeat="song in album.albumData">
+    <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false" ng-repeat="song in album.albumData.songs">
       <td class="song-item-number">
-        <span ng-show="!playing && !hovered">{{$index + 1}}</span>
-        <a class="album-song-button" ng-show="!playing && hovered"><span class="ion-play"></span></a>
-        <a class="album-song-button" ng-show="playing"><span class="ion-pause"></span></a>
+        <span ng-show="!hovered && !song.playing">{{ $index + 1 }}</span>
+        <a class="album-song-button" ng-show="hovered && !song.playing" ng-click="album.songPlayer.play(song)"><span class="ion-play"></span></a>
+        <a class="album-song-button" ng-show="song.playing" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a>
       </td>
-      <td class="song-item-title">{{ song.songs[$index].title }}</td>
-      <td class="song-item-duration">{{ song.songs[$index].duration }}</td>
+      <td class="song-item-title">{{ song.title }}</td>
+      <td class="song-item-duration">{{ song.duration }}</td>
     </tr>
   </table>
 </main>
