--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -21,11 +21,11 @@
 <div class="control-group currently-playing">
      <h2 class="song-name">{{ album.songPlayer.currentSong.title }}</h2>
      <h2 class="artist-song-mobile"></h2>
-     <h3 class="artist-name">{{album.albumData.artist}}</h3>
+     <h3 class="artist-name">{{ album.albumData.artist }}</h3>
      <div class="seek-control">
           <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-          <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div>
-          <div class="total-time">{{ album.songPlayer.currentSong.duration }}</div>
+          <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
+          <div class="total-time">{{ album.songPlayer.currentSong.duration | timecode }}</div>
      </div>
 </div>
 <div class="control-group volume">
